--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "make": "electron-forge make"
   },
   "dependencies": {
+    "@july_cm/media-scraper": "0.2.0",
+    "antd": "^5.24.7",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router": "^7.5.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.0",
@@ -26,5 +30,12 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^6.2.6"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "electron",
+      "electron-winstaller",
+      "esbuild"
+    ]
   }
 }
